zebra-state/src/service/finalized_state/disk_format/tests/snapshots/tx_loc_by_transparent_addr_loc_raw_data@testnet_2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "00000100000000010000010000",
    v: "",
  ),
  KV(
    k: "00000100000000010000020000",
    v: "",
  ),
]
