zebra-state/src/service/finalized_state/disk_format/tests/snapshots/utxo_by_out_loc_raw_data@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 144
expression: cf_data
---
[
  KV(
    k: "0000010000000000",
    v: "50c30000000000002321027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875ac",
  ),
  KV(
    k: "0000010000000001",
    v: "d43000000000000017a9147d46a730d31f97b1930d3368a967c309bd4d136a87",
  ),
]
