zebra-state/src/service/finalized_state/disk_format/tests/snapshots/utxo_by_out_loc_raw_data@testnet_1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 144
expression: cf_data
---
[
  KV(
    k: "0000010000000000",
    v: "50c30000000000002321025229e1240a21004cf8338db05679fa34753706e84f6aebba086ba04317fd8f99ac",
  ),
  KV(
    k: "0000010000000001",
    v: "d43000000000000017a914ef775f1f997f122a062fff1a2d7443abd1f9c64287",
  ),
]
