zebra-state/src/service/finalized_state/disk_format/tests/snapshots/utxo_by_outpoint_raw_data@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "0946edb9c083c9942d92305444527765fad789c438c717783276a9f7fbf61b8500000000",
    v: "0000010150c30000000000002321027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875ac",
  ),
  KV(
    k: "0946edb9c083c9942d92305444527765fad789c438c717783276a9f7fbf61b8501000000",
    v: "00000101d43000000000000017a9147d46a730d31f97b1930d3368a967c309bd4d136a87",
  ),
]
