zebra-state/src/service/finalized_state/disk_format/tests/snapshots/utxo_by_outpoint_raw_data@mainnet_2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 125
expression: cf_data

---
[
  KV(
    k: "0946edb9c083c9942d92305444527765fad789c438c717783276a9f7fbf61b8500000000",
    v: "000000010150c30000000000002321027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875ac",
  ),
  KV(
    k: "0946edb9c083c9942d92305444527765fad789c438c717783276a9f7fbf61b8501000000",
    v: "0000000101d43000000000000017a9147d46a730d31f97b1930d3368a967c309bd4d136a87",
  ),
  KV(
    k: "f4b084a7c2fc5a5aa2985f2bcb1d4a9a65562a589d628b0d869c5f1c8dd0748900000000",
    v: "0000000201a0860100000000002321027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875ac",
  ),
  KV(
    k: "f4b084a7c2fc5a5aa2985f2bcb1d4a9a65562a589d628b0d869c5f1c8dd0748901000000",
    v: "0000000201a86100000000000017a9147d46a730d31f97b1930d3368a967c309bd4d136a87",
  ),
]
